--- a/src/Components/PostBlock/Post/Post.css
+++ b/src/Components/PostBlock/Post/Post.css
@@ -34,7 +34,8 @@
   font-size: 14px;
 }
 .previewPostDescriptionText{
-  max-width: 370px;
+  max-width: 300px;
+  word-break: break-all;
 }
 .previewPostTitleDecorate{
   border-radius: 50px;
